# ChangeLog for app-emulation/fuse
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/fuse/ChangeLog,v 1.6 2004/03/21 06:31:05 mr_bones_ Exp $

  20 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> fuse-0.6.1.1.ebuild,
  fuse-0.6.2.1.ebuild:
  stop using deprecated ?: use syntax

*fuse-0.6.2.1 (28 Feb 2004)

  28 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bump to work with new libspectrum #39904

*fuse-0.6.1.1 (20 Nov 2003)

  24 Dec 2003; David Holm <dholm@gentoo.org> fuse-0.6.1.1.ebuild:
  Added to ~ppc.

  27 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> fuse-0.6.0.1.ebuild:
  clean old version of ebuild

  20 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + DEPEND fixups #31215 #27711.

*fuse-0.6.0.1 (15 Jul 2003)

  15 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Adam Short <ajs@orinoco.homelinux.org> #18523.