@@ -1,5 +1,5 @@
-MD5 41a37d0b6e9d7bf269ce6961f5cebae4 ChangeLog 978
-MD5 cfe188edcbc444d81ad0f5068312f979 fuse-0.6.1.1.ebuild 1676
-MD5 349f863b7dbe2546f01733027c3ab759 fuse-0.6.2.1.ebuild 1664
+MD5 8124639cd506ce1778b6aa0a74afe025 ChangeLog 1123
+MD5 b3a04a0d51e7a807718b0804eca1541c fuse-0.6.1.1.ebuild 1686
+MD5 8908fba0af493dd3d4a88a9440e7d215 fuse-0.6.2.1.ebuild 1673
 MD5 5f2dadd0c93925bbe9f614df56f9bf1e files/digest-fuse-0.6.2.1 64
 MD5 a006698565f857d2c37f037f2c2c5e4a files/digest-fuse-0.6.1.1 64
